--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = "1.0"
-serde_yaml = "0.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.9"
