--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,10 @@
 test:
-  cmd: "tail -f /dev/null"
+  cmd: "mkdir test"
   numprocs: 3
   autostart: true
   autorestart: unexpected
   exitcodes:
+    - 1
     - 0
     - 2
   starttime: 5
@@ -16,7 +17,7 @@ test:
     STARTED_BY: taskmaster
     ANSWER: 42
   workingdir: /tmp
-  umask: 022
+  umask: 000
 server:
   cmd: "python3 -m http.server"
   numprocs: 1
@@ -34,4 +35,4 @@ server:
     STARTED_BY: taskmaster
     ANSWER: 42
   workingdir: /tmp
-  umask: 077
+  umask: 000
