--- a/config.yml
+++ b/config.yml
@@ -9,8 +9,8 @@ test:
     - 2
   starttime: 5
   startretries: 3
-  stopsignal: TERM
-  stoptime: 10
+  stopsignal: 26
+  stoptime: 2
   stdout: /tmp/taskmaster1.stdout
   stderr: /tmp/taskmaster1.stderr
   env:
@@ -27,7 +27,7 @@ server:
     - 0
   starttime: 5
   startretries: 3
-  stopsignal: USR1
+  stopsignal: 25
   stoptime: 10
   stdout: /tmp/taskmaster2.stdout
   stderr: /tmp/taskmaster2.stderr
